K8s/deployment.yml
---
  kind: Deployment
  apiVersion: apps/v1
  metadata:
    name: aureliacomponentgallery
    namespace: websites
  spec:
    selector:
      matchLabels:
        name: aureliacomponentgallery
    template:
      metadata:
        labels:
          name: aureliacomponentgallery
      spec:
        containers:
        - name: aureliacomponentgallery
          image: dolittle/components.aurelia.gallery
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            name: http
          resources:
            limits:
              cpu: 250m
              memory: 100Mi
