K8s/service.yml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: aureliacomponentgallery
    namespace: websites
  spec:
    ports:
    - port: 80
      targetPort: http
      name: http
    selector:
      app: aureliacomponentgallery
      name: aureliacomponentgallery
